--- a/Survey of Intelligent Chatbots and Conversational Interfaces/Survey of Intelligent Chatbots and Conversational Interfaces.tex
+++ b/Survey of Intelligent Chatbots and Conversational Interfaces/Survey of Intelligent Chatbots and Conversational Interfaces.tex
@@ -1,6 +1,5 @@
 \documentclass[paper=a4, fontsize=18pt]{article} % A4 paper and 11pt font size
 \usepackage{lmodern}
-\usepackage[T1]{fontenc} % Use 8-bit encoding that has 256 glyphs
 \usepackage{graphicx}
 \usepackage{epstopdf}
 \usepackage{subfigure}
@@ -853,6 +852,6 @@ Weizenbaum, J. ELIZA - a computer program for the study of natural language comm
 
 \end{thebibliography}
 
-\bibliography{d:/research/chatbot}
+\bibliography{chatbot}
 
 \end{document}
